[Tables] Add support for Entity struct (#15003)
* adding test for custom entity

* further

* starting access policy

* working for basic entity

* adding to test

* new generated code, removed one more test

* AddEntity now takes []bytes

* adding directive to change entity to []byte, changes to compile and be able to pass

* converting Value map[string]interface{} -> []byte in convenience layer

* paging works the same way now too

* fixing two tests, update complex and basic test entities, need to add type hints for int64/float64 types

* adding test for delete method, changed delete etag to be nil

* working test for merge

* Added Merge test

* fix up test query simple entity

* complex query test

* everything except for batch tests

* basic batch functionality

* fixing batch mixed test

* fixed last batch test

* added separate file for testing batch actions

* fixing query on table service client to take a pointer as well

* working on annotating entities

* fixing recordings

* working with odata annotations

* working test for using odata to annotate entity

* adding options to get

* working with embedded entity now too

* adding to entity, peeling off prints

* converted to a type

* first change to add EdmEntity type

* updated unmarshalling

* removing two files

* fix editLink

* removing sample

* cleaning up

* removing more code

* cleaning up

* formatting

* formatting

--- a/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestBatchMixed-variables.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestBatchMixed-variables.yaml
@@ -1,6 +1,5 @@
 ---
 COSMOS_TABLES_ENDPOINT_SUFFIX: cosmos.azure.com
-TABLES_COSMOS_ACCOUNT_NAME: chrisstablesprim
+TABLES_COSMOS_ACCOUNT_NAME: seankaneprim
 TABLES_PRIMARY_COSMOS_ACCOUNT_KEY: Kg==
-now: "2021-05-21T14:41:05.1021027-05:00"
-randomSeed: "1621626063"
+randomSeed: "1626385596"
