--- a/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestMergeEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestMergeEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotable6emf0bk6m2agc"}'
+    body: '{"TableName":"gotableywepa36ndzpzr"}'
     form: {}
     headers:
       Accept:
@@ -16,35 +16,33 @@ interactions:
       Dataserviceversion:
       - "3.0"
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 20:25:56 GMT
+      - Thu, 15 Jul 2021 21:46:42 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.cosmos.azure.com/Tables
+    url: https://seankaneprim.table.cosmos.azure.com/Tables
     method: POST
   response:
-    body: '{"TableName":"gotable6emf0bk6m2agc","odata.metadata":"https://chrisstablesprim.table.cosmos.azure.com/$metadata#Tables/@Element"}'
+    body: '{"TableName":"gotableywepa36ndzpzr","odata.metadata":"https://seankaneprim.table.cosmos.azure.com/$metadata#Tables/@Element"}'
     headers:
       Content-Type:
       - application/json;odata=minimalmetadata
       Date:
-      - Fri, 21 May 2021 20:25:57 GMT
+      - Thu, 15 Jul 2021 21:46:41 GMT
       Etag:
-      - W/"datetime'2021-05-21T20%3A25%3A57.4829064Z'"
+      - W/"datetime'2021-07-15T21%3A46%3A41.4738440Z'"
       Location:
-      - https://chrisstablesprim.table.cosmos.azure.com/Tables('gotable6emf0bk6m2agc')
-      Server:
-      - Microsoft-HTTPAPI/2.0
+      - https://seankaneprim.table.cosmos.azure.com/Tables('gotableywepa36ndzpzr')
       X-Ms-Request-Id:
-      - 5fa5b82f-551e-424c-8695-36d3099e2ec0
-    status: 201 Ok
+      - 45bd7a97-85c0-4a53-b6c5-63f9061d4d55
+    status: 201 Created
     code: 201
     duration: ""
 - request:
-    body: '{"BoolProp":true,"IntProp":1,"PartitionKey":"partition","RowKey":"1","StringProp":"some
-      string 1"}'
+    body: '{"Bool":true,"Integer":1,"PartitionKey":"partition","RowKey":"1","String":"some
+      string 1","Timestamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -52,7 +50,7 @@ interactions:
       Authorization:
       - sanitized
       Content-Length:
-      - "98"
+      - "125"
       Content-Type:
       - application/json
       Dataserviceversion:
@@ -60,31 +58,27 @@ interactions:
       Prefer:
       - return-no-content
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 20:25:57 GMT
+      - Thu, 15 Jul 2021 21:46:43 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.cosmos.azure.com/gotable6emf0bk6m2agc
+    url: https://seankaneprim.table.cosmos.azure.com/gotableywepa36ndzpzr
     method: POST
   response:
     body: ""
     headers:
-      Content-Length:
-      - "0"
       Date:
-      - Fri, 21 May 2021 20:25:57 GMT
+      - Thu, 15 Jul 2021 21:46:41 GMT
       Etag:
-      - W/"datetime'2021-05-21T20%3A25%3A58.0876808Z'"
+      - W/"datetime'2021-07-15T21%3A46%3A42.2534152Z'"
       Location:
-      - https://chrisstablesprim.table.cosmos.azure.com/gotable6emf0bk6m2agc(PartitionKey='partition',RowKey='1')
+      - https://seankaneprim.table.cosmos.azure.com/gotableywepa36ndzpzr(PartitionKey='partition',RowKey='1')
       Preference-Applied:
       - return-no-content
-      Server:
-      - Microsoft-HTTPAPI/2.0
       X-Ms-Request-Id:
-      - 51bcbecc-ab8e-4c77-8f28-92843e3bd90c
+      - 937b0662-fd0a-4f27-8f52-258f81876137
     status: 204 No Content
     code: 204
     duration: ""
@@ -99,31 +93,32 @@ interactions:
       Dataserviceversion:
       - "3.0"
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 20:25:57 GMT
+      - Thu, 15 Jul 2021 21:46:43 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.cosmos.azure.com/gotable6emf0bk6m2agc()?%24filter=RowKey+eq+%271%27
+    url: https://seankaneprim.table.cosmos.azure.com/gotableywepa36ndzpzr(PartitionKey='partition',RowKey='1')
     method: GET
   response:
-    body: '{"value":[{"odata.etag":"W/\"datetime''2021-05-21T20%3A25%3A58.0876808Z''\"","BoolProp":true,"IntProp":1,"PartitionKey":"partition","RowKey":"1","StringProp":"some
-      string 1","Timestamp":"2021-05-21T20:25:58.0876808Z"}],"odata.metadata":"https://chrisstablesprim.table.cosmos.azure.com/$metadata#gotable6emf0bk6m2agc"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.cosmos.azure.com/gotableywepa36ndzpzr/$metadata#gotableywepa36ndzpzr/@Element","odata.etag":"W/\"datetime''2021-07-15T21%3A46%3A42.2534152Z''\"","Bool":true,"Integer":1,"PartitionKey":"partition","RowKey":"1","String":"some
+      string 1","Timestamp":"2021-07-15T21:46:42.2534152Z"}'
     headers:
       Content-Type:
       - application/json;odata=minimalmetadata
       Date:
-      - Fri, 21 May 2021 20:25:57 GMT
-      Server:
-      - Microsoft-HTTPAPI/2.0
+      - Thu, 15 Jul 2021 21:46:41 GMT
+      Etag:
+      - W/"datetime'2021-07-15T21%3A46%3A42.2534152Z'"
       X-Ms-Request-Id:
-      - 82b460c2-5845-41f1-a62f-854fe69ac246
-    status: 200 Ok
+      - 83d8b301-116d-4f1a-9920-2ba95888e6ff
+    status: 200 OK
     code: 200
     duration: ""
 - request:
-    body: '{"MergeProperty":"foo","PartitionKey":"partition","RowKey":"1"}'
+    body: '{"Bool":true,"Integer":1,"MergeProperty":"foo","PartitionKey":"partition","RowKey":"1","String":"some
+      string 1","Timestamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -131,7 +126,7 @@ interactions:
       Authorization:
       - sanitized
       Content-Length:
-      - "63"
+      - "147"
       Content-Type:
       - application/json
       Dataserviceversion:
@@ -139,29 +134,25 @@ interactions:
       If-Match:
       - '*'
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Http-Method:
       - MERGE
       X-Ms-Date:
-      - Fri, 21 May 2021 20:25:58 GMT
+      - Thu, 15 Jul 2021 21:46:43 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.cosmos.azure.com/gotable6emf0bk6m2agc(PartitionKey='partition',RowKey='1')
+    url: https://seankaneprim.table.cosmos.azure.com/gotableywepa36ndzpzr(PartitionKey='partition',RowKey='1')
     method: POST
   response:
     body: ""
     headers:
-      Content-Length:
-      - "0"
       Date:
-      - Fri, 21 May 2021 20:25:58 GMT
+      - Thu, 15 Jul 2021 21:46:41 GMT
       Etag:
-      - W/"datetime'2021-05-21T20%3A25%3A58.2475272Z'"
-      Server:
-      - Microsoft-HTTPAPI/2.0
+      - W/"datetime'2021-07-15T21%3A46%3A42.4934408Z'"
       X-Ms-Request-Id:
-      - 9dc5e715-8500-4ef9-a2d0-d26602a86f16
+      - e3b0733d-5162-4aec-9bbd-b1407c8033dc
     status: 204 No Content
     code: 204
     duration: ""
@@ -176,27 +167,25 @@ interactions:
       Dataserviceversion:
       - "3.0"
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 20:25:58 GMT
+      - Thu, 15 Jul 2021 21:46:43 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.cosmos.azure.com/gotable6emf0bk6m2agc()?%24filter=RowKey+eq+%271%27
+    url: https://seankaneprim.table.cosmos.azure.com/gotableywepa36ndzpzr()?%24filter=RowKey+eq+%271%27
     method: GET
   response:
-    body: '{"value":[{"odata.etag":"W/\"datetime''2021-05-21T20%3A25%3A58.2475272Z''\"","BoolProp":true,"IntProp":1,"PartitionKey":"partition","RowKey":"1","StringProp":"some
-      string 1","MergeProperty":"foo","Timestamp":"2021-05-21T20:25:58.2475272Z"}],"odata.metadata":"https://chrisstablesprim.table.cosmos.azure.com/$metadata#gotable6emf0bk6m2agc"}'
+    body: '{"value":[{"odata.etag":"W/\"datetime''2021-07-15T21%3A46%3A42.4934408Z''\"","Bool":true,"Integer":1,"PartitionKey":"partition","RowKey":"1","String":"some
+      string 1","MergeProperty":"foo","Timestamp":"2021-07-15T21:46:42.4934408Z"}],"odata.metadata":"https://seankaneprim.table.cosmos.azure.com/$metadata#gotableywepa36ndzpzr"}'
     headers:
       Content-Type:
       - application/json;odata=minimalmetadata
       Date:
-      - Fri, 21 May 2021 20:25:58 GMT
-      Server:
-      - Microsoft-HTTPAPI/2.0
+      - Thu, 15 Jul 2021 21:46:41 GMT
       X-Ms-Request-Id:
-      - 87e09a62-3363-49b8-bb37-9d68a981b6cd
-    status: 200 Ok
+      - addd730f-bdd2-42bf-85d6-af1be8c38861
+    status: 200 OK
     code: 200
     duration: ""
 - request:
@@ -208,25 +197,21 @@ interactions:
       Authorization:
       - sanitized
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 20:25:58 GMT
+      - Thu, 15 Jul 2021 21:46:43 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.cosmos.azure.com/Tables('gotable6emf0bk6m2agc')
+    url: https://seankaneprim.table.cosmos.azure.com/Tables('gotableywepa36ndzpzr')
     method: DELETE
   response:
     body: ""
     headers:
-      Content-Length:
-      - "0"
       Date:
-      - Fri, 21 May 2021 20:25:58 GMT
-      Server:
-      - Microsoft-HTTPAPI/2.0
+      - Thu, 15 Jul 2021 21:46:42 GMT
       X-Ms-Request-Id:
-      - adb03d8d-0443-442d-99ed-1546b9f305dd
+      - 5d0bc5b2-21ab-4488-a11a-8469d0d128a9
     status: 204 No Content
     code: 204
     duration: ""
