--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestAddComplexEntity-variables.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestAddComplexEntity-variables.yaml
@@ -1,6 +1,5 @@
 ---
 STORAGE_ENDPOINT_SUFFIX: core.windows.net
 TABLES_PRIMARY_STORAGE_ACCOUNT_KEY: Kg==
-TABLES_STORAGE_ACCOUNT_NAME: chrisstablesprim
-now: "2021-04-10T19:18:38.5403201-05:00"
-randomSeed: "1618100317"
+TABLES_STORAGE_ACCOUNT_NAME: seankaneprim
+randomSeed: "1626385877"
