--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestBatchAdd-variables.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestBatchAdd-variables.yaml
@@ -1,6 +1,5 @@
 ---
 STORAGE_ENDPOINT_SUFFIX: core.windows.net
 TABLES_PRIMARY_STORAGE_ACCOUNT_KEY: Kg==
-TABLES_STORAGE_ACCOUNT_NAME: chrisstablesprim
-now: "2021-05-18T10:39:58.4641986-05:00"
-randomSeed: "1621352397"
+TABLES_STORAGE_ACCOUNT_NAME: seankaneprim
+randomSeed: "1626385830"
