--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestQueryComplexEntity-variables.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestQueryComplexEntity-variables.yaml
@@ -1,6 +1,5 @@
 ---
 STORAGE_ENDPOINT_SUFFIX: core.windows.net
 TABLES_PRIMARY_STORAGE_ACCOUNT_KEY: Kg==
-TABLES_STORAGE_ACCOUNT_NAME: chrisstablesprim
-now: "2021-05-19T11:25:34.8176907-05:00"
-randomSeed: "1621441533"
+TABLES_STORAGE_ACCOUNT_NAME: seankaneprim
+randomSeed: "1626385681"
