--- a/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestBatchAdd-variables.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Cosmos/TestBatchAdd-variables.yaml
@@ -1,6 +1,5 @@
 ---
 COSMOS_TABLES_ENDPOINT_SUFFIX: cosmos.azure.com
-TABLES_COSMOS_ACCOUNT_NAME: chrisstablesprim
+TABLES_COSMOS_ACCOUNT_NAME: seankaneprim
 TABLES_PRIMARY_COSMOS_ACCOUNT_KEY: Kg==
-now: "2021-05-18T10:39:59.9902777-05:00"
-randomSeed: "1621352398"
+randomSeed: "1626385593"
