--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestBatchMixed-variables.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestBatchMixed-variables.yaml
@@ -1,6 +1,5 @@
 ---
 STORAGE_ENDPOINT_SUFFIX: core.windows.net
 TABLES_PRIMARY_STORAGE_ACCOUNT_KEY: Kg==
-TABLES_STORAGE_ACCOUNT_NAME: chrisstablesprim
-now: "2021-05-21T14:41:03.2032731-05:00"
-randomSeed: "1621626062"
+TABLES_STORAGE_ACCOUNT_NAME: seankaneprim
+randomSeed: "1626385786"
