--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestDeleteEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestDeleteEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotable1eyzuuvhvub30"}'
+    body: '{"TableName":"gotablevevyc3u4ogcyx"}'
     form: {}
     headers:
       Accept:
@@ -16,39 +16,39 @@ interactions:
       Dataserviceversion:
       - "3.0"
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 19:12:57 GMT
+      - Thu, 15 Jul 2021 21:49:26 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/Tables
+    url: https://seankaneprim.table.core.windows.net/Tables
     method: POST
   response:
-    body: '{"odata.metadata":"https://chrisstablesprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotable1eyzuuvhvub30"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotablevevyc3u4ogcyx"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Fri, 21 May 2021 19:12:57 GMT
+      - Thu, 15 Jul 2021 21:49:25 GMT
       Location:
-      - https://chrisstablesprim.table.core.windows.net/Tables('gotable1eyzuuvhvub30')
+      - https://seankaneprim.table.core.windows.net/Tables('gotablevevyc3u4ogcyx')
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - d8f0ab3d-2002-0006-0275-4e07ab000000
+      - c4984373-9002-00a3-42c3-798db0000000
       X-Ms-Version:
       - "2019-02-02"
     status: 201 Created
     code: 201
     duration: ""
 - request:
-    body: '{"BoolProp":true,"IntProp":1,"PartitionKey":"partition","RowKey":"1","StringProp":"some
-      string 1"}'
+    body: '{"Bool":true,"Integer":1,"PartitionKey":"partition","RowKey":"1","String":"some
+      string 1","Timestamp":"0001-01-01T00:00:00Z"}'
     form: {}
     headers:
       Accept:
@@ -56,7 +56,7 @@ interactions:
       Authorization:
       - sanitized
       Content-Length:
-      - "98"
+      - "125"
       Content-Type:
       - application/json
       Dataserviceversion:
@@ -64,13 +64,13 @@ interactions:
       Prefer:
       - return-no-content
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 19:12:57 GMT
+      - Thu, 15 Jul 2021 21:49:27 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/gotable1eyzuuvhvub30
+    url: https://seankaneprim.table.core.windows.net/gotablevevyc3u4ogcyx
     method: POST
   response:
     body: ""
@@ -80,13 +80,13 @@ interactions:
       Content-Length:
       - "0"
       Dataserviceid:
-      - https://chrisstablesprim.table.core.windows.net/gotable1eyzuuvhvub30(PartitionKey='partition',RowKey='1')
+      - https://seankaneprim.table.core.windows.net/gotablevevyc3u4ogcyx(PartitionKey='partition',RowKey='1')
       Date:
-      - Fri, 21 May 2021 19:12:57 GMT
+      - Thu, 15 Jul 2021 21:49:25 GMT
       Etag:
-      - W/"datetime'2021-05-21T19%3A12%3A58.1142822Z'"
+      - W/"datetime'2021-07-15T21%3A49%3A26.4583762Z'"
       Location:
-      - https://chrisstablesprim.table.core.windows.net/gotable1eyzuuvhvub30(PartitionKey='partition',RowKey='1')
+      - https://seankaneprim.table.core.windows.net/gotablevevyc3u4ogcyx(PartitionKey='partition',RowKey='1')
       Preference-Applied:
       - return-no-content
       Server:
@@ -94,7 +94,7 @@ interactions:
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - d8f0ab55-2002-0006-1575-4e07ab000000
+      - c49843a2-9002-00a3-6cc3-798db0000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -113,13 +113,13 @@ interactions:
       If-Match:
       - '*'
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 19:12:58 GMT
+      - Thu, 15 Jul 2021 21:49:27 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/gotable1eyzuuvhvub30(PartitionKey='partition',RowKey='1')
+    url: https://seankaneprim.table.core.windows.net/gotablevevyc3u4ogcyx(PartitionKey='partition',RowKey='1')
     method: DELETE
   response:
     body: ""
@@ -129,13 +129,13 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Fri, 21 May 2021 19:12:58 GMT
+      - Thu, 15 Jul 2021 21:49:25 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - d8f0ab6c-2002-0006-2975-4e07ab000000
+      - c49843e6-9002-00a3-2ec3-798db0000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -150,13 +150,13 @@ interactions:
       Authorization:
       - sanitized
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 19:12:58 GMT
+      - Thu, 15 Jul 2021 21:49:27 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/Tables('gotable1eyzuuvhvub30')
+    url: https://seankaneprim.table.core.windows.net/Tables('gotablevevyc3u4ogcyx')
     method: DELETE
   response:
     body: ""
@@ -166,13 +166,13 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Fri, 21 May 2021 19:12:58 GMT
+      - Thu, 15 Jul 2021 21:49:25 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - d8f0ab7c-2002-0006-3975-4e07ab000000
+      - c4984417-9002-00a3-5ec3-798db0000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
