--- a/sdk/tables/aztable/recordings/TestTableClient_Storage/TestUpsertEntity.yaml
+++ b/sdk/tables/aztable/recordings/TestTableClient_Storage/TestUpsertEntity.yaml
@@ -2,7 +2,7 @@
 version: 1
 interactions:
 - request:
-    body: '{"TableName":"gotableybpwrxkkatqur"}'
+    body: '{"TableName":"gotablemhr5jkk1y0d72"}'
     form: {}
     headers:
       Accept:
@@ -16,38 +16,126 @@ interactions:
       Dataserviceversion:
       - "3.0"
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 20:34:58 GMT
+      - Thu, 15 Jul 2021 21:47:25 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/Tables
+    url: https://seankaneprim.table.core.windows.net/Tables
     method: POST
   response:
-    body: '{"odata.metadata":"https://chrisstablesprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotableybpwrxkkatqur"}'
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#Tables/@Element","TableName":"gotablemhr5jkk1y0d72"}'
     headers:
       Cache-Control:
       - no-cache
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Fri, 21 May 2021 20:34:58 GMT
+      - Thu, 15 Jul 2021 21:47:24 GMT
       Location:
-      - https://chrisstablesprim.table.core.windows.net/Tables('gotableybpwrxkkatqur')
+      - https://seankaneprim.table.core.windows.net/Tables('gotablemhr5jkk1y0d72')
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - c1ecaa3f-8002-0030-1d80-4e8adb000000
+      - d5213e2a-d002-008d-49c2-79dfa7000000
       X-Ms-Version:
       - "2019-02-02"
     status: 201 Created
     code: 201
     duration: ""
 - request:
-    body: '{"BoolProp":true,"IntProp":1,"PartitionKey":"partition","RowKey":"1","StringProp":"some
+    body: '{"Bool":true,"Integer":1,"PartitionKey":"partition","RowKey":"1","String":"some
+      string 1","Timestamp":"0001-01-01T00:00:00Z"}'
+    form: {}
+    headers:
+      Accept:
+      - application/json
+      Authorization:
+      - sanitized
+      Content-Length:
+      - "125"
+      Content-Type:
+      - application/json
+      Dataserviceversion:
+      - "3.0"
+      User-Agent:
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
+        Windows_NT)
+      X-Ms-Date:
+      - Thu, 15 Jul 2021 21:47:26 GMT
+      X-Ms-Version:
+      - "2019-02-02"
+    url: https://seankaneprim.table.core.windows.net/gotablemhr5jkk1y0d72(PartitionKey='partition',RowKey='1')
+    method: PUT
+  response:
+    body: ""
+    headers:
+      Cache-Control:
+      - no-cache
+      Content-Length:
+      - "0"
+      Date:
+      - Thu, 15 Jul 2021 21:47:24 GMT
+      Etag:
+      - W/"datetime'2021-07-15T21%3A47%3A25.2690439Z'"
+      Server:
+      - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
+      X-Content-Type-Options:
+      - nosniff
+      X-Ms-Request-Id:
+      - d5213e45-d002-008d-57c2-79dfa7000000
+      X-Ms-Version:
+      - "2019-02-02"
+    status: 204 No Content
+    code: 204
+    duration: ""
+- request:
+    body: ""
+    form: {}
+    headers:
+      Accept:
+      - application/json;odata=minimalmetadata
+      Authorization:
+      - sanitized
+      Dataserviceversion:
+      - "3.0"
+      User-Agent:
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
+        Windows_NT)
+      X-Ms-Date:
+      - Thu, 15 Jul 2021 21:47:26 GMT
+      X-Ms-Version:
+      - "2019-02-02"
+    url: https://seankaneprim.table.core.windows.net/gotablemhr5jkk1y0d72(PartitionKey='partition',RowKey='1')
+    method: GET
+  response:
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotablemhr5jkk1y0d72/@Element","odata.etag":"W/\"datetime''2021-07-15T21%3A47%3A25.2690439Z''\"","PartitionKey":"partition","RowKey":"1","Timestamp":"2021-07-15T21:47:25.2690439Z","Bool":true,"Integer":1,"String":"some
+      string 1"}'
+    headers:
+      Cache-Control:
+      - no-cache
+      Content-Type:
+      - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
+      Date:
+      - Thu, 15 Jul 2021 21:47:24 GMT
+      Etag:
+      - W/"datetime'2021-07-15T21%3A47%3A25.2690439Z'"
+      Server:
+      - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
+      X-Content-Type-Options:
+      - nosniff
+      X-Ms-Request-Id:
+      - d5213e5a-d002-008d-64c2-79dfa7000000
+      X-Ms-Version:
+      - "2019-02-02"
+    status: 200 OK
+    code: 200
+    duration: ""
+- request:
+    body: '{"Integer":1,"MergeProperty":"foo","PartitionKey":"partition","RowKey":"1","String":"some
       string 1"}'
     form: {}
     headers:
@@ -56,19 +144,19 @@ interactions:
       Authorization:
       - sanitized
       Content-Length:
-      - "98"
+      - "100"
       Content-Type:
       - application/json
       Dataserviceversion:
       - "3.0"
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 20:34:59 GMT
+      - Thu, 15 Jul 2021 21:47:26 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/gotableybpwrxkkatqur(PartitionKey='partition',RowKey='1')
+    url: https://seankaneprim.table.core.windows.net/gotablemhr5jkk1y0d72(PartitionKey='partition',RowKey='1')
     method: PUT
   response:
     body: ""
@@ -78,15 +166,15 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Fri, 21 May 2021 20:34:58 GMT
+      - Thu, 15 Jul 2021 21:47:24 GMT
       Etag:
-      - W/"datetime'2021-05-21T20%3A34%3A59.5369667Z'"
+      - W/"datetime'2021-07-15T21%3A47%3A25.4922034Z'"
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - c1ecaa49-8002-0030-2380-4e8adb000000
+      - d5213e80-d002-008d-7fc2-79dfa7000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
@@ -103,16 +191,16 @@ interactions:
       Dataserviceversion:
       - "3.0"
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 20:34:59 GMT
+      - Thu, 15 Jul 2021 21:47:26 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/gotableybpwrxkkatqur()?%24filter=RowKey+eq+%271%27
+    url: https://seankaneprim.table.core.windows.net/gotablemhr5jkk1y0d72()?%24filter=RowKey+eq+%271%27
     method: GET
   response:
-    body: '{"odata.metadata":"https://chrisstablesprim.table.core.windows.net/$metadata#gotableybpwrxkkatqur","value":[{"odata.etag":"W/\"datetime''2021-05-21T20%3A34%3A59.5369667Z''\"","PartitionKey":"partition","RowKey":"1","Timestamp":"2021-05-21T20:34:59.5369667Z","BoolProp":true,"IntProp":1,"StringProp":"some
+    body: '{"odata.metadata":"https://seankaneprim.table.core.windows.net/$metadata#gotablemhr5jkk1y0d72","value":[{"odata.etag":"W/\"datetime''2021-07-15T21%3A47%3A25.4922034Z''\"","PartitionKey":"partition","RowKey":"1","Timestamp":"2021-07-15T21:47:25.4922034Z","Integer":1,"MergeProperty":"foo","String":"some
       string 1"}]}'
     headers:
       Cache-Control:
@@ -120,97 +208,13 @@ interactions:
       Content-Type:
       - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
       Date:
-      - Fri, 21 May 2021 20:34:58 GMT
+      - Thu, 15 Jul 2021 21:47:24 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - c1ecaa4c-8002-0030-2580-4e8adb000000
-      X-Ms-Version:
-      - "2019-02-02"
-    status: 200 OK
-    code: 200
-    duration: ""
-- request:
-    body: '{"MergeProperty":"foo","PartitionKey":"partition","RowKey":"1"}'
-    form: {}
-    headers:
-      Accept:
-      - application/json
-      Authorization:
-      - sanitized
-      Content-Length:
-      - "63"
-      Content-Type:
-      - application/json
-      Dataserviceversion:
-      - "3.0"
-      User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
-        Windows_NT)
-      X-Ms-Date:
-      - Fri, 21 May 2021 20:34:59 GMT
-      X-Ms-Version:
-      - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/gotableybpwrxkkatqur(PartitionKey='partition',RowKey='1')
-    method: PUT
-  response:
-    body: ""
-    headers:
-      Cache-Control:
-      - no-cache
-      Content-Length:
-      - "0"
-      Date:
-      - Fri, 21 May 2021 20:34:58 GMT
-      Etag:
-      - W/"datetime'2021-05-21T20%3A34%3A59.6890733Z'"
-      Server:
-      - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
-      X-Content-Type-Options:
-      - nosniff
-      X-Ms-Request-Id:
-      - c1ecaa52-8002-0030-2b80-4e8adb000000
-      X-Ms-Version:
-      - "2019-02-02"
-    status: 204 No Content
-    code: 204
-    duration: ""
-- request:
-    body: ""
-    form: {}
-    headers:
-      Accept:
-      - application/json;odata=minimalmetadata
-      Authorization:
-      - sanitized
-      Dataserviceversion:
-      - "3.0"
-      User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
-        Windows_NT)
-      X-Ms-Date:
-      - Fri, 21 May 2021 20:34:59 GMT
-      X-Ms-Version:
-      - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/gotableybpwrxkkatqur()?%24filter=RowKey+eq+%271%27
-    method: GET
-  response:
-    body: '{"odata.metadata":"https://chrisstablesprim.table.core.windows.net/$metadata#gotableybpwrxkkatqur","value":[{"odata.etag":"W/\"datetime''2021-05-21T20%3A34%3A59.6890733Z''\"","PartitionKey":"partition","RowKey":"1","Timestamp":"2021-05-21T20:34:59.6890733Z","MergeProperty":"foo"}]}'
-    headers:
-      Cache-Control:
-      - no-cache
-      Content-Type:
-      - application/json;odata=minimalmetadata;streaming=true;charset=utf-8
-      Date:
-      - Fri, 21 May 2021 20:34:58 GMT
-      Server:
-      - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
-      X-Content-Type-Options:
-      - nosniff
-      X-Ms-Request-Id:
-      - c1ecaa53-8002-0030-2c80-4e8adb000000
+      - d5213e9a-d002-008d-17c2-79dfa7000000
       X-Ms-Version:
       - "2019-02-02"
     status: 200 OK
@@ -225,13 +229,13 @@ interactions:
       Authorization:
       - sanitized
       User-Agent:
-      - azsdk-go-tables/<version> azsdk-go-tables/<version> azcore/v0.16.1 (go1.16.2;
+      - azsdk-go-aztable/<version> azsdk-go-aztable/<version> azcore/v0.16.2 (go1.16.5;
         Windows_NT)
       X-Ms-Date:
-      - Fri, 21 May 2021 20:34:59 GMT
+      - Thu, 15 Jul 2021 21:47:26 GMT
       X-Ms-Version:
       - "2019-02-02"
-    url: https://chrisstablesprim.table.core.windows.net/Tables('gotableybpwrxkkatqur')
+    url: https://seankaneprim.table.core.windows.net/Tables('gotablemhr5jkk1y0d72')
     method: DELETE
   response:
     body: ""
@@ -241,13 +245,13 @@ interactions:
       Content-Length:
       - "0"
       Date:
-      - Fri, 21 May 2021 20:34:58 GMT
+      - Thu, 15 Jul 2021 21:47:24 GMT
       Server:
       - Windows-Azure-Table/1.0 Microsoft-HTTPAPI/2.0
       X-Content-Type-Options:
       - nosniff
       X-Ms-Request-Id:
-      - c1ecaa59-8002-0030-3180-4e8adb000000
+      - d5213eab-d002-008d-27c3-79dfa7000000
       X-Ms-Version:
       - "2019-02-02"
     status: 204 No Content
